[gd_scene load_steps=2 format=3 uid="uid://cxxsc2si2s3p2"]

[ext_resource type="Script" path="res://Scripts/Province_Area.gd" id="1_e1htr"]

[node name="ProvinceArea" type="Area2D"]
script = ExtResource("1_e1htr")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
